@@ -13,6 +13,7 @@ import com.group0505team1.repository.UserRepository;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 public class UserService {
@@ -45,19 +46,14 @@ public class UserService {
     }
 
     public User findUserById(int id) {
-        User user = userRepository.findById(id);
-        if (user == null) {
-            throw new UserNotFoundException("Пользователь с ID : " + id + " не найден!");
-        }
-        return user;
+        return Optional.ofNullable(userRepository.findById(id))
+                .orElseThrow(() -> new UserNotFoundException("Пользователь с ID : " + id + " не найден!"));
     }
 
+
     public User findByName(String name) {
-        User user = userRepository.findByName(name);
-        if (user == null) {
-            throw new UserNotFoundException("Пользователь с именем '" + name + "' не найден!");
-        }
-        return user;
+        return Optional.ofNullable(userRepository.findByName(name))
+                .orElseThrow(() -> new UserNotFoundException("Пользователь с именем '" + name + "' не найден!"));
     }
 
     public List<Task> getAllUserTasks(String name) {
@@ -65,13 +61,24 @@ public class UserService {
         return taskRepository.findByUserId(user.getId());
     }
 
-    public List<Task> getTasksByFilter(int userId, TaskStatus statusFilter, Integer priority) {
-        List<Task> tasks = getAllUserTasks(findUserById(userId).getName());
+    //    public List<Task> getTasksByFilter(int userId, TaskStatus statusFilter, Integer priority) {
+//        List<Task> tasks = getAllUserTasks(findUserById(userId).getName());
+//
+//        return tasks.stream()
+//                .filter(task -> (statusFilter == null || task.getStatus() == statusFilter))
+//                .filter(task -> (priority == null || task.getPriority() == priority))
+//                .collect(Collectors.toList());
+//    }
 
-        return tasks.stream()
-                .filter(task -> (statusFilter == null || task.getStatus() == statusFilter))
-                .filter(task -> (priority == null || task.getPriority() == priority))
-                .collect(Collectors.toList());
+    public List<Task> getTasksByFilter(int userId, TaskStatus statusFilter, Integer priority) {
+        return getAllUserTasks(findUserById(userId).getName()).stream()
+                .filter(task -> Optional.ofNullable(statusFilter)
+                        .map(status -> task.getStatus() == status)
+                .orElse(true))
+                .filter(task ->  Optional.ofNullable(priority)
+                        .map(p -> task.getPriority() == p)
+                        .orElse(true))
+                .toList();
     }
 
 }
